--- a/configs/CUB/deit_fcam_small_patch16_224.yaml
+++ b/configs/CUB/deit_fcam_small_patch16_224.yaml
@@ -3,6 +3,7 @@ BASIC:
   SEED: 26
   BACKUP_CODES: True
   BACKUP_LIST: ['lib', 'tools_cam', 'configs']
+  NUM_WORKERS: 12
 
 MODEL:
   ARCH: deit_fcam_small_patch16_224
